# Vectorestore-Fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml  vercel.json
api/: index.py
app/: basic_security.py  chat.py  main.py  openai_qa.py  requirements.txt  start.sh  vector_qa.py
local_vector_db/: README.md
src/: index.py
vertex_ai_pipeline_design/: Palm_api_basic.ipynb  azure_gpt4.ipynb
